Fix navbar on mobile

--- a/app/assets/stylesheets/home_mobile.scss
+++ b/app/assets/stylesheets/home_mobile.scss
@@ -28,7 +28,3 @@ html, body {
 .tab-content {
   width: 100%;
 }
-
-.navbar-desktop-part {
-  display: none;
-}
