--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -59,3 +59,7 @@ html, body {
   overflow-y: auto;
   padding: 1rem;
 }
+
+.navbar-desktop-part {
+  display: none;
+}
